add category docs
